<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nightbars.nightbars.AddActivity"
    android:background="#ffffff">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!--<ImageView android:src=""
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />-->

            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <!--  Type Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/type" />
            </android.support.design.widget.TextInputLayout>

            <!--  Price Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/price" />
            </android.support.design.widget.TextInputLayout>

            <!-- Location Label -->
            <!-- <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView android:id="@+id/input_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />
                <Button
                    android:id="@+id/btn_add_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add location"
                    android:onClick="location"/>
            </LinearLayout> -->

            <!-- Score Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/score"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Add place Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_addPlace"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/add_place"
                android:textColor="#ffffff"
                android:background="#33bbff"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
